Configured application for mysql server

--- a/LiftOffProject/appsettings.json
+++ b/LiftOffProject/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-LiftOffProject-158F7073-8CDD-4C01-A220-FDF0B2B22893;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "server=localhost;userid=liftoffproject;password=L@unchC0de!;database=liftoffproject;"
   },
   "Logging": {
     "LogLevel": {
