--- a/LiftOffProject/LiftOffProject.csproj
+++ b/LiftOffProject/LiftOffProject.csproj
@@ -17,4 +17,10 @@
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="Views\Quiz\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Views\Quiz\" />
+  </ItemGroup>
 </Project>
