--- a/LiftOffProject/appsettings.json
+++ b/LiftOffProject/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;userid=LiftOffProject;password=L@unchC0de!;database=liftoffproject;"
+    "DefaultConnection": "server=localhost;userid=liftoffproject;password=L@unchC0de!;database=liftoffproject;"
   },
   "Logging": {
     "LogLevel": {
