--- a/LiftOffProject/appsettings.json
+++ b/LiftOffProject/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;userid=liftoffproject;password=L@unchC0de!;database=liftoffproject;"
+    "DefaultConnection": "server=localhost;userid=liftoffproject;password=L@unchC0de!;database=liftoffproject;",
+    "LiftOffProjectIdentityDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=LiftOffProject;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
